PCS BAckup 26Dec2023/Backup-Source/objects/Sample_Object__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sku_code__c</fullName>
        <label>Sku_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sample Object</label>
    <nameField>
        <displayFormat>SO-{00}</displayFormat>
        <label>Sample Object No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>